--- a/package.json
+++ b/package.json
@@ -1,9 +1,10 @@
 {
-  "name": "cli_number_guessing",
+  "name": "srk_number_guessing_game",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
   "type":"module",
+  "bin":"main.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
